# dtsp-tauri

./: .gitignore  Cargo.toml  Trunk.toml  index.html
.github/: Dockerfile.aarch64
.github/workflows/: build-aarch64.yml  build-release.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
